# rustyfolio

./: .gitignore  Cargo.toml  LICENSE  README.md
diagrams/: Overview-2025-04-18-0950.excalidraw
src/: importer.rs  main.rs  portfolio.rs  tax.rs
src/importer/: csv.rs  etrade.rs  mod.rs
