[package]
name = "rustyfolio"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive", "color"] }
log = "0.4.27"
calamine = "0.26.1"
zip = { version = "=2.5.0" }
env_logger = "0.11.8"
